fixed image on mobile

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 .card > img {
-    left: 35px;
+    left: 0px;
     position: absolute;
     top: -115px;
     
